# PowerController

./: .cache_ggshield  .gitignore  .pre-commit-config.yaml  404.html  README draw down.md  README.md  config_example.yaml  config_schemas.py  controller.py  enumerations.py  external_services.py  index.html  json_encoder.py  launch.sh  local_enumerations.py  main.py  mkdocs.yml  objects.inv  outputs.py  pricing.py  pyproject.toml  refresh_from_github.sh  release.sh  restart_service.sh  run_history.py  run_plan.py  scheduler.py  service_ctrl.sh  shelly_view.py  shelly_worker.py  show_ver.sh  sitemap.xml  snapshot_runtime_files.sh  system_state.tmp  thread_manager.py  webapp.py
.claude/: settings.local.json
configuration/: index.html
configuration/example_config/: index.html
configuration/sections/amber_api/: index.html
configuration/sections/data_api/: index.html
configuration/sections/devices/: index.html
configuration/sections/email/: index.html
configuration/sections/files/: index.html
configuration/sections/general/: index.html
configuration/sections/heartbeat_monitor/: index.html
configuration/sections/location/: index.html
configuration/sections/operating_schedules/: index.html
configuration/sections/output_metering/: index.html
configuration/sections/output_sequences/: index.html
configuration/sections/outputs/: index.html
configuration/sections/power_tariff/: index.html
configuration/sections/shelly_devices/: index.html
configuration/sections/temp_probe_logging/: index.html
configuration/sections/teslamate/: index.html
configuration/sections/ups_integration/: index.html
configuration/sections/viewer_website/: index.html
configuration/sections/website/: index.html
docs/: data_api.md  features.md  freeze_time.md  index.md  prod_deployment.md  running.md  upgrading.md
docs/configuration/: example_config.md  index.md
docs/configuration/sections/: amber_api.md  data_api.md  devices.md  email.md  files.md  general.md  heartbeat_monitor.md  location.md  operating_schedules.md  output_metering.md  output_sequences.md  outputs.md  power_tariff.md  shelly_devices.md  temp_probe_logging.md  teslamate.md  ups_integration.md  viewer_website.md  weather_client.md  website.md
docs/installation/: device_setup.md  index.md  install_app.md  prerequisites.md  raspberry_pi_python.md  shelly_setup.md
features/: index.html
getting_started/: index.html
installation/: index.html
installation/device_setup/: index.html
installation/install_app/: index.html
installation/prerequisites/: index.html
installation/raspberry_pi_python/: index.html
installation/shelly_setup/: index.html
prod_deployment/: index.html
prod_snapshots/20260211_193001/: config.yaml
running/: index.html
search/: search_index.json
shell_scripts/: apc_ups_runtime.sh  snapshot_runtime_files.sh  ups_runtime.sh
simulation_data/: Sydney_Dev_A.json
site/: 404.html  index.html  sitemap.xml
site/configuration/: index.html
site/configuration/example_config/: index.html
site/data_api/: index.html
site/features/: index.html
site/freeze_time/: index.html
site/installation/: index.html
site/installation/device_setup/: index.html
site/installation/install_app/: index.html
site/installation/prerequisites/: index.html
site/installation/raspberry_pi_python/: index.html
site/installation/shelly_setup/: index.html
site/prod_deployment/: index.html
site/running/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
site/upgrading/: index.html
src/: __init__.py  config_schemas.py  controller.py  dataapi.py  debug_support.py  external_services.py  helpers.py  local_enumerations.py  main.py  meter_output.py  output_constraint.py  outputs.py  pricing.py  run_history.py  run_plan.py  scheduler.py  shelly_view.py  shelly_worker.py  src_fatal_error.txt  teslamate.py  teslamate_output.py  thread_manager.py  ups_integration.py  weather_integration.py  webapp.py
src/teslamate_charge_importer/: config.py  db.py  importer.py  models.py
static/: index.html  styles.css
stylesheets/: extra.css
templates/: index.html
tests/: TEST_SUMMARY.md  conftest.py  test_dataapi.py  test_output_manager.py  test_run_history.py  test_run_history_midnight_rollover.py  test_run_plan.py  test_scheduler.py  test_shelly_view.py  test_shelly_worker.py  test_smart_device_view.py  test_smart_device_worker.py  test_ups_integration.py  test_weather_integration.py  test_webapp.py  testing.yaml
upgrading/: index.html
(+18 files in other folders)
