[project]
name = "powercontroller"
version = "1.8.2"
description = "App to control and monitor devices via Shelly smart switches"
readme = "README.md"
requires-python = ">=3.13"
service_name="PowerController"
launch_path="src/main.py"
dependencies = [
    "fastapi>=0.115.0",
    "flask>=3.1.2",
    "jinja2>=3.1.0",
    "org-enums>=1.0.7",
    "pre-commit>=4.3.0",
    "python-dateutil>=2.9.0.post0",
    "sc-utility>=2.6.8",
    "uvicorn[standard]>=0.32.0",
    "werkzeug>=3.1.3",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.15.1",
    "pre-commit>=3.5.0",
    "pytest-dotenv>=0.5.2",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pdoc>=14.7.0",
]


[tool.uv.sources]
org-enums = { git = "https://github.com/NickElseySpelloC/org_enums", tag = "v1.0.7" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dev.env.sync]
remote="~/Library/CloudStorage/Dropbox/Development/dev_setup/app_config/PowerController"
patterns = [
    ".env",
    "configs/*",
    "system_state.json",
    "logs/*",
    "snapshots/dev/*",
]
